--- a/wellordered.tex
+++ b/wellordered.tex
@@ -46,14 +46,14 @@ A definably well-ordered structure $M$ has definable Skolem functions.
 A definably well-ordered structure $M$ has uniform elimination of imaginaries. 
 \end{cor}
 
-Notice that being a definably well-ordered structure is stronger than to have definable choice. For instance the real field has definable choice but by a result of Ramakrishnan every definable order embeds in $(\RR^n,<_{\text{lex}})$. Therefore, no definable linear order has minimal elements for all definable subsets of the real line. Using this one can show that no reduct the real field is definably well orderable. 
+Notice that being a definably well-ordered structure is stronger than to have definable choice. For instance the real field has definable choice but by a result of Ramakrishnan in \cite{ramakrishnan-12} every definable order embeds in $(\RR^n,<_{\text{lex}})$. Therefore, no definable linear order has minimal elements for all definable subsets of the real line. Using this one can show that no reduct the real field is definably well orderable. 
 
 \
 
-Though definably well-ordered structures have strong model-theoretic properties, they are not always model-theoretically tame. For instance, the theory of arithmetic is definably well-orderable and yet model-theoretically wild. The main example of a tame well-orderable theory is Presburger Arithmetic. This is the content of the following proposition: 
+Though definably well-ordered structures have strong model-theoretic properties, they are not always model-theoretically tame. For instance, the theory of arithmetic is definably well-orderable and yet model-theoretically wild. The main example of a tame well-orderable theory is Presburger Arithmetic. This is a consecuence of the following proposition: 
 
 \begin{prop}\label{preswellorder}
-Presburger arithmetic is definably well-orderable, that is, $Th(\ZZ,+,-,0,1,\leq,(\equiv_n)_{n\in \mathbb{N}})$ is well-orderable.
+Let $\Lm$ be a language containing $\{\leq,-\}$ (as $\Lm_{Pres}$). Then $Th(\ZZ,\Lm)$ is definably well-orderable.
 \end{prop}
 
 \begin{proof}
