--- a/introduction.tex
+++ b/introduction.tex
@@ -1,16 +1,88 @@
 % !TEX root = nov.tex
 \section{Introduction}
-UNDER CONSTRUCTION\\
-When working with valued fields, it is often natural to consider many-sorted languages, where we not only have a field sort $K$, but also sorts for the value group $\Gamma_K$ or the residue field $k_K$. Traditionally, the field sort is considered to be the main sort, and the focus is on which sets in the main sort are definable. The other sorts are auxiliary to this end.
+When working with valued fields, it is often natural to consider many-sorted languages, where we not only have a field sort $K$, but also sorts for the value group $\Gamma_K$ or the residue field $k_K$. One of the original motivations was that it can make formulas less complicated, for instance for cases where one has elimination of field sort quantifiers (possibly at the expense of adding quantifiers in the other sorts). Studying the interactions between the sorts can also tell us more about the properties of the field $K$ and the structure as a whole.  
 
-This paper is a first exploration into a minimality concept for p-adically closed fields, where we consider both the field sort and the \emph{auxiliary} sort $\Gamma_K$ to be of equal importance. More specifically, we will consider the following minimality concept. Let $(K, \Gamma_K;\Lm_2)$ be a two-sorted structure, where $\cL$, the language for the $K$-sort is an expansion of the ring language $\Lring$. Associated to $\cL$ is the two-sorted language $\cL_2$ which consists of a sort for $K$ in $\cL$, a sort for $\Gamma_K\cup\{+\infty\}$ in the language of Presburger arithmetic $\cL_{Pres}$ and the valuation map $\ord: K\to \Gamma_K\cup\{+\infty\}$. If the language $\Lm_2$ is clear from the context, we will just write $(K, \Gamma_K)$.
+%{\color{red}Traditionally, the field sort is considered to be the main sort, and the focus is on which sets in the main sort are definable. The other sorts are auxiliary to this end REPLACE BY SOMETHING ABOUT WHAT THE INTERACTION OF SORTS TELLS US}.
+
+This paper is a first exploration into a minimality concept for p-adically closed fields, where we consider both the field sort and the \emph{auxiliary} sort $\Gamma_K$ to be of equal importance. More specifically, we will consider the following minimality concept. Let $(K, \Gamma_K;\Lm_2)$ be a two-sorted structure, with language $\Lm_2 = (\Lm, \cL_{Pres}, \ord)$. Here $\cL$, the language for the $K$-sort is an expansion of the ring language $\Lring$. For the value group sort $\Gamma_K\cup\{+\infty\}$, we use the language of Presburger arithmetic $\cL_{Pres} = (+,-,<,\equiv_n)$. The sorts are connected through the valuation map $\ord: K\to \Gamma_K\cup\{+\infty\}$. If the language $\Lm_2$ is clear from the context, we will just write $(K, \Gamma_K)$.
 \begin{defn}
-An $\Lm_2$-structure $(K,\Gamma_K)$ is \emph{relatively $P$-minimal} (relative to the sort $\Gamma_K$), if, for any elementary equivalent $\Lm_2$-structure $(K',\Gamma_{K'})$, every $\Lm_2$-definable subset $X\subseteq K'\times \Gamma_{K'}$ is already $\cL_{\rm ring, 2}$-definable.
+An $\Lm_2$-structure $(K,\Gamma_K)$ is \emph{relatively $P$-minimal} if, for any elementary equivalent $\Lm_2$-structure $(K',\Gamma_{K'})$, every $\Lm_2$-definable subset $X\subseteq K'\times \Gamma_{K'}$ is already $\cL_{\rm ring, 2}$-definable.
 \end{defn}
 
 %Let $\cL_{\rm ring}$ be the ring language and let $\cL$ be a language containing $\cL_{\rm ring}$. Associated to $\cL$ is the two-sorted language $\cL_2$ which consists of a sort for $K$ in $\cL$, a sort for $\Gamma_K\cup\{+\infty\}$ in the language of Presburger arithmetic $\cL_{Pres}$ and the valuation map $\ord: K\to \Gamma_K\cup\{+\infty\}$.
 
- Our main motivation to consider such structures is an interest in the behavior of definable functions. {\color{red} add comment about  similar motivations in C-minimality} In order to prove certain rationality results, Denef introduced the following class of functions: 
+This definition is similar to the existing notion of $P$-minimality developed by Haskell and Macpherson \cite{has-mac-97}. The difference is the extension of the minimality condition to definable subsets of $K\times \Gamma_K$, rather than just $K$ or $\Gamma_K$ separately. 
+For instance, the two-sorted version of the subanalytic structure does satisfy this stronger minimality notion, as we will show in section \ref{sec:relativity}.
+
+Recall that in our setup, the language $\Lm$ for the $K$-sort may be any expansion of $\Lring$, whereas the language $\cL_{\text{Pres}}$ for the $\Gamma_K$-sort is fixed. It might seem more general to work with a more symmetric definition, where also expansions of $\cL_{\text{Pres}}$ would be allowed. However, it turns out that this restriction is quite natural, since it is induced by the $P$-minimality condition for the field sort.  We will explain this in more detail in Section \ref{sec:relativity}, where we will also discuss some other possible notions of minimality, and how they  relate to the one proposed here.
+
+ 
+The main motivation for considering relatively $P$-minimal structures is an interest in the behavior of definable functions: 
+  a \emph{preparation} theorem, based on cell-decomposition plays an important role in many proofs for the semi-algebraic and subanalytic cases. So far, one has not succeeded in generalizing these theorems to the $P$-minimal context.
+%However, a similar theorem currently does not exist in the $P$-minimal context. 
+Our slightly stronger minimality condition will allow us to provide preparation theorems for definable functions $D \to \Gamma_K$. This is possible because relative $P$-minimality  essentially imposes a minimality condition on the graphs of functions $K \to \Gamma_K$. Similar approaches have been used in other contexts as well.
+For instance, in $C$-minimality Delon \cite{delon-12} added an assumption on the behaviour of definable function $\Gamma_K \to \Gamma_K$, to prove that definable functions $K \to K$ are piecewise $C_1$ (when $K$ has characteristic $(0,0)$). 
+\\\\
+Given that the exact formulations of the preparation theorems can be somewhat dense notationally, we will first explain the underying philosophy. 
+
+We will consider preparation for functions $D \to \Gamma_K$, where $D$ is a definable subset of a product of both $K$-variables and $\Gamma_K$-variables. (Note: Any time we say that a set is $\Lm_2$-definable, without adding further specifications, it should be assumed that the variables involved may be of mixed type.)
+
+Recall that the preparation theorem for semi-algebraic sets gives a partitioning of the domain, on each part of which not the function itself, but its \emph{order} has a certain form. Given this fact, it is natural to consider preparation for functions $D \to \Gamma_K$, rather than $D \to K$. 
+In fact, this setup is more general: it gives information about the valuation of definable functions $D \to K$, but also about definable functions $D \to \Gamma_K$, which need not always be of the form $\ord(h(x))$, for a definable function $h: D\to K$.
+
+The aim of the preparation theorem is to make explicit their dependence on one of the variables. Since we work in a two-sorted context, the implication of this is that we will need to present two versions of the theorem: one for functions $D\times \Gamma_k \to \Gamma_K$, and one for functions $D\times K \to \Gamma_K$.
+The first version is easy enough to state
+\begin{thm*}
+Let $f: D\times \Gamma_K \to \Gamma_K$ be definable in a relatively $P$-minimal structure. There exists a finite partition of $D \times \Gamma_K$ in $\Gamma$-cells $C$, such that on each cell $C$, $f$ has the form
+\[f(x,\gamma) = a\left(\frac{\gamma-n_0}{n}\right) + \delta(x),\]
+where $a \in \ZZ, n,n_0 \in \NN$ and $\delta$ is a definable function $D\to \Gamma_K$. 
+\end{thm*}
+We will give the exact definition of a $\Gamma$-cell in the next section. The notion of $\Gamma$-cells is inspired by Cluckers' cell decomposition result for Presburger structures \cite{clu-presb03}.  %For now it is enough to note that for $\gamma \in C$, we will have that 
+%$\gamma \equiv n_0 \mod n$.
+
+The idea behind the preparation theorem for functions $D \times K \to \Gamma_K$ is similar, but the underlying cell decomposition result is more subtle. Mourgues \cite{mou-09} showed that in a $P$-minimal structure which admits definable Skolem functions, any definable set $A \subseteq K^{r+1}$ can be partitioned in cells of the form
+\[\{(x,t) \subseteq D\times K\mid \ord a(x) \ \square_1 \ \ord(t-c(x)) \ \ord b(x); t-c(x) \in \lambda P_n\},\]
+where $a,b,c: D\to K$ are definable functions. Moreover, she showed that the existence of definable Skolem functions is a necessary condition to have a decomposition using cells of this form.
+
+We do not want to include the assumption of definable Skolem functions, for the following reasons. First of all, notice that a relative $P$-minimal structure $(K,\Gamma_K)$ cannot have definable Skolem functions. This is because having definable Skolem functions would imply the existence of a section of $\ord$, that is, a definable functions $h:\Gamma_K\to K$ such that $\ord(h(\gamma))=\gamma$ for all $\gamma\in \Gamma_K$. The existence of such function contradicts the $P$-minimality of $K$ (it is easy to see (see also Lemma \ref{lem:constant}), that a function $\Gamma_K^l \to K$ must be piecewise constant if $K$ is a $p$-adic field). An alternative would be to ask that in the relative $P$-minimal $\Lm_2$-structure $(K,\Gamma_K)$, the one sorted $\Lm$-strucrure $K$ has definable Skolem functions. Nevertheless, it is unknown whether these always exist in a $P$-minimal structure, and work by the second author on reducts of $p$-adically closed fields \cite{lee-2012.1} seems to indicate that this is probably not the case. 
+
+The main reason why Skolem functions are important for Mourgues' cell decomposition result, is because it allows one to ensure that the \emph{center} $c(x)$ is given by a definable function. In our case, we will still get a decomposition into \emph{cells}, in the sense that we still get a partition of subsets of $D\times K$ into subsets of $D_i \times K$ with $D_i \subset D$, where the last variable $t$ is described by finitely many $K$-cell conditions $C_{\delta}$ of the form
+ \begin{equation*}
+ \alpha(x)\ \square_1 \ \ord(t-c_x) \ \square_2 \ \beta(x) \ \wedge \ord(t-c_x) \equiv k\hspace{-6pt}\mod n \ \wedge \ac_{m}(t-c_x) = \xi ,
+\end{equation*}
+where now $\alpha,\beta$ are definable functions $D\to \Gamma_K$. The main change is that we no longer assume the $c_x$ to come from a definable function, but rather we provide a set $\Sigma \subseteq D_i \times K^r$, which provides the possible centers $(x,c_1,\ldots, c_r)$ for the $r$ $K$-cell conditions in the decomposition. The technical details will be explained in the next section.
+%{\color{SeaGreen} Do we talk about the problem of splitting cells??}
+%Because of definability issues, there will be two different version
+
+%\begin{itemize}
+%%\item explain why we are only considering functions to $\Gamma_K$. (compare to semi-algebraic preparation)
+%\item Give an informal description of a 'cell' (+ mention the fact that we need to deal with two sorts, so we have to kinds)
+%\\
+%We will give an exact definition of cells later, but the following is an important difference compared to Mourgues' notion. {\color{red} EXPAND THIS PART!!!}
+% The (possible) lack of definable Skolem functions implies that the centers of our cells are not necessarily given by definable functions. Instead, we provide a decompositon into `cells', together with a definable set containing all tuples that one may use for their centers.
+%%\item give $\Gamma$-preparation
+%\end{itemize}
+Using this decomposition, we obtain the following preparation result if the last variable is a $K$-variable:
+\begin{thm}[$K$-Preparation theorem]\label{thm:partialprep} 
+Let $(K,\Gamma_K)$ be a relatively $P$-minimal $\Lm_2$-structure. Let $S\subseteq K^l\times\Gamma^l$ and $X \subseteq S \times K$ be $\Lm_2$-definable sets, and $f:X\rightarrow \Gamma_k$ be an $\Lm_2$-definable function. \item There exists a $K$-cell decomposition $\{(X_i)_{i},(\Sigma_i)_{i}, (C_{\delta_{ij}})_{i,j}\}$ of $X$, such that for each part $X_i$ in the decomposition, there is a tuple of $\Lm_2$-definable functions $\gamma_{ij}:S_i\to\Gamma_K$ and integers $a_{ij}$. For all $s\in S_i$, and for any choice of  $(c_{1,s}, \ldots, c_{r_i,s}) \in (\Sigma_i)_s$, we have that for every $t \in C_{\delta_{ij}}(t,c_j,\alpha_{ij},\beta_{ij};s)$, 
+\[f(s,t) = \gamma_{ij}(s) + a_{ij}\frac{\ord(t-c_{j,s})-k_{ij}}{n},\]
+where $\delta_{ij} =(\Box, k_{ij},n,m,\xi)$.
+%We stress that the functions $c: S\to K$ are NOT necessarily $\Lm_2$-definable {\color{red} EXPLAIN WHAT THIS MEANS AND THAT IT IS BETTER THAN IT SOUNDS}.
+\end{thm}
+The meaning of this theorem is roughly the following. 
+We provide a decomposition in `cells' $C_{\delta}$, together with a set $\Sigma$ consisting of all possible choices for their centers. 
+For any possible choice you might make from $\Sigma$, if you partition your set into the resulting cells, on each of them the function will have the simple linear form stated in the theorem.
+
+The theorem stated here is for relatively $P$-minimal structures. However, the relativity condition is only used for the function preparation part. 
+The cell decomposition result by itself already holds in a $P$-minimal context, where we obtain (see Definition \ref{def:celdecB} in the next section for an exact definition of a $K$-cell decomposition).
+
+\begin{thm}
+Let $X \subseteq K^{r+1}$ be a set definable in a $P$-minimal structure $(K, \Lm)$. Then there exists a $K$-cell decomposition $\{(X_i)_{i},(\Sigma_i)_{i},(C_{\delta_{ij}})_{i,j})\}$ of $X$.
+\end{thm}
+ This decomposition is weaker than Morgues' result, as there may be no definable way to choose elements from $\Sigma$, but it is unconditional. 
+\\\\
+In the second part of the paper, we discuss the following applications of the preparation theorems.  In this part of the paper (sections \ref{sec:integration} and \ref{sec:rationality}), we will assume that $K$ is a $p$-adic field, or at least a $p$-adically closed field for which the value group is just $\Z$. The results in other sections are valid for arbitrary $p$-adically closed fields.
+ In order to prove certain rationality results, Denef introduced the class of constructible functions: 
 
 \begin{defn}
 Let $X$ be an $\cL_2$-definable set. Write $\AA_{q_K}$ for the ring \[\AA_{q_K}:=\ZZ\left[q_K, q_K^{-1}, \left(\frac1{1-q_K^{-i}}\right)_{i\in \NN, i>0}\right].\]
@@ -22,32 +94,35 @@ Call a function $f:X\to \QQ$ $\cL$-constructible (or $\cL_2$-constructible) if i
 where $\alpha$ and $\beta$ are $\cL_2$-definable and $\ZZ$-valued.  
 \end{defn}
 
-When $\cL$ is $\cL_{\rm ring}$, the subanalytic language $\Lm_{an}$ on $K$ (see \ref{eq:subanalytic}) or some intermediary languages as in \cite{CLip}, the class of $\Lm$-constructible functions is known to be stable under integration (see \cite{denef-2000}, \cite{Clu-2003}, and \cite{Clu-Gor-Hal-14} for the most convenient dealing with integrability conditions). These structures are the main examples of $P$-minimal structures, following the notion developed by Haskell and Macpherson \cite{has-mac-97}. However, it is not known whether the analogous class of functions, build up from definable functions in a general $P$-minimal structure always has this stability property. 
 
-In order to prove that a class of functions is stable integration, one needs to control the behavior of the functions involved.% by showing that there exists a partitioning of the domain where the functions can be assumed to have a certain form. 
 
-Such a \emph{preparation theorem}, based on cell-decomposition is indeed the main ingredient in the proof for the semi-algebraic and subanalytic cases.
-However, a similar theorem currently does not exist in the $P$-minimal context. Mourgues \cite{mou-09} proved a somewhat weaker form of cell decomposition under the assumption of Skolem functions on $(K,\cL)$, but without function preparation.
-\\
------------------------------------------------------------------------------------------------------
-\\
-
-this form of cell decomposition seems not enough to show stability under integration. The idea of relative $P$-minimality is to bring into account the value group in the definition of minimality as follows:
-
-\begin{defn}
-Call the $\Lm_2$-structure $(K,\Gamma_K)$ \emph{relatively $P$-minimal} (relative to the sort $\Gamma$), if, for any elementary equivalent $\Lm_2$-structure $(K',\Gamma_{K'})$, any $\Lm_2$-definable subset $X\subseteq K'\times \Gamma_{K'}$ is already $\cL_{\rm ring, 2}$-definable.
-\end{defn}
-Here, $\Gamma_{K'}$ stands for the value group of $K'$. When $\cL$ is $\cL_{\rm ring}$ or $\Lm_{an}$, the $\Lm_2$-structure $(K,\Gamma_K)$ is relative $P$-minimal (as we will show in Lemma \ref{lem:suban}). The preparation theorem that we show is the following:  
-
-\begin{thm}[Preparation theorem for relative $P$-minimality]\label{thm:partialprep} 
-Let $(K,\Gamma_K)$ be relatively $P$-minimal $\Lm_2$-structure. Let $S\subseteq K^l\times\Gamma^l$ and $X \subseteq S \times K$ be $\Lm_2$-definable sets, and $f:X\rightarrow \Gamma_k$ be an $\Lm_2$-definable function. There exists a finite decomposition of $X$ into cells $C$ of the form  
-\[C = \left\{(s,t) \in D\times K \ \left| \ \begin{array}{l} \alpha(s) \square_1 \ \ord(t-c(s)) \ \square_2 \ \beta(s),\\ \ord(t-c(s)) \equiv k\mod n,\\ \ac_{m}(t-c(s)) = \xi \end{array} \right\}\right..\]
-On each such cell $C$, there is a $\Lm_2$-definable function $\gamma:D\to\Gamma_K$ and an integer $a\in \ZZ$ such that for all $(s,t) \in C$, 
-\[f(s,t) = \gamma(s) + a\frac{\ord(t-c(s))-k}{n}.\]
-We stress that the functions $c: S\to K$ are NOT necessarily $\Lm_2$-definable.
-\end{thm}
-
-As an application we are able to show (for a more precise statement see \ref{thm:integration}): 
+When $\cL$ is $\cL_{\rm ring}$, the subanalytic language $\Lm_{an}$ on $K$ (see \ref{eq:subanalytic}) or some intermediary languages as in \cite{CLip}, the class of $\Lm$-constructible functions is known to be stable under integration (see \cite{denef-2000}, \cite{Clu-2003}, and \cite{Clu-Gor-Hal-14} for the most convenient dealing with integrability conditions). % These structures are the main examples of $P$-minimal structures, following the notion developed by Haskell and Macpherson \cite{has-mac-97}. 
+However, it is not known whether the analogous class of functions, build up from definable functions in a general $P$-minimal structure always has this stability property. 
+%
+%In order to prove that a class of functions is stable integration, one needs to control the behavior of the functions involved.% by showing that there exists a partitioning of the domain where the functions can be assumed to have a certain form. 
+%
+%Such a \emph{preparation theorem}, based on cell-decomposition is indeed the main ingredient in the proof for the semi-algebraic and subanalytic cases.
+%However, a similar theorem currently does not exist in the $P$-minimal context. Mourgues \cite{mou-09} proved a somewhat weaker form of cell decomposition under the assumption of Skolem functions on $(K,\cL)$, but without function preparation. 
+%\\
+%-----------------------------------------------------------------------------------------------------
+%\\
+%
+%this form of cell decomposition seems not enough to show stability under integration. The idea of relative $P$-minimality is to bring into account the value group in the definition of minimality as follows:
+%
+%\begin{defn}
+%Call the $\Lm_2$-structure $(K,\Gamma_K)$ \emph{relatively $P$-minimal} (relative to the sort $\Gamma$), if, for any elementary equivalent $\Lm_2$-structure $(K',\Gamma_{K'})$, any $\Lm_2$-definable subset $X\subseteq K'\times \Gamma_{K'}$ is already $\cL_{\rm ring, 2}$-definable.
+%\end{defn}
+%Here, $\Gamma_{K'}$ stands for the value group of $K'$. When $\cL$ is $\cL_{\rm ring}$ or $\Lm_{an}$, the $\Lm_2$-structure $(K,\Gamma_K)$ is relative $P$-minimal (as we will show in Lemma \ref{lem:suban}). The preparation theorem that we show is the following:  
+%
+%\begin{thm}[Preparation theorem for relative $P$-minimality]\label{thm:partialprep} 
+%Let $(K,\Gamma_K)$ be relatively $P$-minimal $\Lm_2$-structure. Let $S\subseteq K^l\times\Gamma^l$ and $X \subseteq S \times K$ be $\Lm_2$-definable sets, and $f:X\rightarrow \Gamma_k$ be an $\Lm_2$-definable function. There exists a finite decomposition of $X$ into cells $C$ of the form  
+%\[C = \left\{(s,t) \in D\times K \ \left| \ \begin{array}{l} \alpha(s) \square_1 \ \ord(t-c(s)) \ \square_2 \ \beta(s),\\ \ord(t-c(s)) \equiv k\mod n,\\ \ac_{m}(t-c(s)) = \xi \end{array} \right\}\right..\]
+%On each such cell $C$, there is a $\Lm_2$-definable function $\gamma:D\to\Gamma_K$ and an integer $a\in \ZZ$ such that for all $(s,t) \in C$, 
+%\[f(s,t) = \gamma(s) + a\frac{\ord(t-c(s))-k}{n}.\]
+%We stress that the functions $c: S\to K$ are NOT necessarily $\Lm_2$-definable.
+%\end{thm}
+\\\\
+We will prove that whenever $(K, \Gamma_K)$ is a relatively $P$-minimal structure, then the class of $\Lm_2$-constructible functions is stable under integration (for a more precise statement see \ref{thm:integration}): 
 
 \begin{thm*}
 Let $(K, \Z)$ be a relatively $P$-minimal structure, $S$ an $\Lm_2$-definable set and $f: X \subseteq S\times K^m \to \AA_{q_K}$ a constructible function.  There exists a constructible function $g: S \to \AA_{q_K}$, such that
@@ -55,120 +130,19 @@ Let $(K, \Z)$ be a relatively $P$-minimal structure, $S$ an $\Lm_2$-definable se
 whenever $f(s, \cdot)$ is measurable and integrable on the fiber $Y_s$.
 \end{thm*}
 
-We also extend the rationality results so far known only for the semi-algebraic \cite{denef-84} and subanalytic setting \cite{denef-vdd-88} (and thus also for any sublanguage), obtaining the follwing:
+We also extend the rationality results so far known only for the semi-algebraic \cite{denef-84} and subanalytic setting \cite{denef-vdd-88} (and thus also for any sublanguage), obtaining the following:
 
-\begin{thm}\label{thm:rationality}
-Suppose that $(K,\cL)$ is relatively $P$-minimal. Let $X$ be a $\cL_2$-definable subset of $\cO_K^n\times \NN$, and let $a_n$ be the Haar measure of $X_n:=\{x\in \cO_K^n\mid (x,n)\in X\}$ for each $n\geq 0$. Then the series $\sum_{i\geq 0} a_i T^i$ is rational. 
-\end{thm}
-Here, we normalize the Haar measure on $K^n$ so that $\cO_K^n$ has measure $1$. For a more general version see Theorem \ref{thm:rationalitygeneral}.  
+\begin{thm*}\label{thm:rationality}
+Suppose that $(K,\Gamma_K)$ is relatively $P$-minimal. Let $X$ be a $\cL_2$-definable subset of $\cO_K^n\times \NN$, and let $a_n$ be the Haar measure of $X_n:=\{x\in \cO_K^n\mid (x,n)\in X\}$ for each $n\geq 0$. Then the series $\sum_{i\geq 0} a_i T^i$ is rational. 
+\end{thm*}
+Here, we normalize the Haar measure on $K^n$ so that $\cO_K^n$ has measure $1$. For a more precise statement see Theorem \ref{thm:rationalitygeneral}.  
 
 \
 
-The article is presented as follows. Section 2 is devoted to prove the preparation theorem for relative $P$-minimal structures. Sections 3 and 4 correspond respectively to the integration and rationality results. Finally, in section 5 we discuss generalities about the notion of relative $P$-minimality and its relation with classical $P$-minimality. Our arguments will use a result on definable sets of Presburger arithmetic that we include an appendix about ordered structures. 
+The article is organized as follows. In section \ref{sec:celdec}, we will explain our notion of cells in more detail. Section \ref{sec:prep} is devoted to proving the preparation theorem for relative $P$-minimal structures.
+Our arguments will use a result on definable sets of Presburger arithmetic that we include in an appendix about ordered structures. 
 
-\subsection{Preliminaries}
-
-Let $(K,\Gamma_K)$ be a $\cL_2$-structure. By a definable set we mean an $\Lm_2$-definable set allowing parameters. For notational purposes we will fix a definable set $S \subseteq K^{m_0} \times \Gamma_K^{m_0}$ which we call a \emph{parameter set}. For a definable set $X\subseteq S\times K$ and $s\in S$, $X_s:=\{x\in K: (s,x)\in X\}$ denotes the fiber over $s$. Analogously, for a definable function $f:X\rightarrow \Gamma_K$, $f_s$ denotes the function $f(s,\cdot):X_s\rightarrow \Gamma_K$. Given two sets $A$ and $B$, we denote by $\Pi_{A}:A\times B\to A$ for the projection onto $A$ and by $\Pi_B:A\times B\to B$ the projection onto $B$. For a positive integer $n\geq 1$, $A^{\leq n}$ denotes $\bigcup_{i=1}^n A^i$. We start defining cells in this context: 
-
-\begin{defn}[Cells]\label{def:cell} Let $(K,\Gamma_K)$ be a $\cL_2$-structure.  
-\begin{itemize}[leftmargin=*]
-\item A subset $C\subseteq S\times K$ is a $K$-cell if it is of the form 
-\[C = \left\{(s,t) \in D\times K \ \left| \ \begin{array}{l} \alpha(s) \square_1 \ \ord(t-c(s)) \ \square_2 \ \beta(s),\\ \ord(t-c(s)) \equiv k\mod n,\\ \ac_{m}(t-c(s)) = \xi \end{array} \right\}\right.,\]
-where $D$ is a definable subset of $S$, $c$ is a function $c:D\to K$, $\alpha, \beta$ are $\Lm_2$-definable functions $D\to\Gamma_k$, $k, n, m \in \NN$, $\xi \in \ac_{m}(K)$ and the squares $\square_i$ may denote $<$ or \emph{no condition}. If the function $c$ is definable, we say that the cell has \emph{definable centers}.  
-\item A subset $B\subseteq S\times \Gamma_K$ is a $\Gamma$-cell if it is of the form
-\[B= \left\{(s,\gamma)\in D\times \Gamma_K \left|\begin{array}{l} \alpha(s) \square_1 \ \gamma \ \square_2 \ \beta(s), \\
-\gamma \equiv k\mod n \end{array}\right\}\right.,\]
-where $D$ is an definable subset of $S$, $\alpha, \beta$ are definable functions $D\to\Gamma_k$, $k, n\in \NN$ and again the squares $\square_i$ may denote $<$ or \emph{no condition}.  
-\end{itemize}
-\end{defn}
-
-We call \emph{cell} a subset which is either a $K$-cell or a $\Gamma$-cell. Given cells $C$ and $B$ as in the previous definition we call the tuples $(\square,k,n,m,\xi)$ and $(\square,k,n)$ \emph{the type} of $C$ and $B$ respectively. We denote by $P_K$ (resp. $P_\Gamma$) the set of all possible types of $K$-cells (resp. $\Gamma$-cells), that is, the set of tuples $(\square,k,n,m,\xi)$  (resp. $(\square,k,n)$) where $\square = (\square_1, \square_2) \in \{\emptyset, <\}^{2}$, $(k,n,m)$ its a triple of positive integers such that $k<n$, and $\xi\in \ac_{m}(K)$. For $\delta=(\square,k,n,m,\xi)\in P_K$, $\lambda=(\square,k,n)\in P_{\Gamma}$, $\alpha,\beta,\gamma$ variables of type $\Gamma$ and $x,y$ variables of type $K$, we define the formulas
-\begin{equation}\label{defKcells}
-C_\delta(x,y,\alpha,\beta):= \left(\begin{array}{l} \alpha \square_1 \ \ord(x-y) \ \square_2 \ \beta \ \wedge\\ \ord(x-y) \equiv k\mod n \ \wedge\\ \ac_{m}(x-y) = \xi \end{array} \right),
-\end{equation}
-\begin{equation}\label{defGammacells}
-B_\lambda(\alpha,\beta,\gamma):= \left(\begin{array}{l} \alpha \square_1 \ \gamma \ \square_2 \ \beta \ \wedge \\
-\gamma \equiv k\mod n \end{array}\right).
-\end{equation}
-
-Notice that for a definable subset $C\subseteq S\times K$, we can now express the fact that $C$ is a cell with definable centers claiming the existence of definable functions $\alpha,\beta:\Pi_S(C)\to\Gamma_K$, $c:\Pi_S(C)\to K$ and of a tuple $\delta\in P_K$ such that 
-\[C = \left\{(s,t) \in \Pi_S(C)\times K \ \left| \ (K,\Gamma_K)\models C_\delta(t,c(s),\alpha(s),\beta(s))\right\}\right..
-\]
-Analogously, for a definable subset $B\subseteq S\times \Gamma_K$, $B$ is a cell if there are definable functions $\alpha,\beta:\Pi_S(C)\to\Gamma_K$ and an tuple $\lambda\in P_\Gamma$ such that  
-\[B = \left\{(s,\gamma) \in \Pi_S(B) \times \Gamma \ \left| \ (K,\Gamma_K)\models B_\lambda(\alpha(s),\beta(s),\gamma)\right\}\right..
-\]
-
-\subsection{Some observations regarding the definability of centers}
-
-.{\color{red} This should probably come after the preparation theorem?}\\
-How much information about the centers of a cell decomposition will be definable in general?
-It is obvious that the following is always true.
-
-\begin{def-theorem}[Cell Decomposition]\label{def:celdecB}
-Let $A \subseteq S \times K$ be an $\Lm_2$-definable set in a {\color{red} $P$-minimal structure (is relative necessary?)}. There exist definable sets $D_i \subseteq S$, $\Sigma \subseteq S \times K$, a finite subset $\{\delta_1, \ldots, \delta_r\} \subset P_k$, and definable functions $\alpha_i, \beta_i: D_i \to \Gamma_K$, for $i=1, \ldots, r$, such that for every $(c_1, \ldots, c_r) \in \Sigma$, we have that $A$ can be partitioned as
- \[A =\bigcup_{i=1}^r \{(x,t) \in D_i \times K \mid C_{\delta_i}(t,c_i, \alpha_i, \beta_i)\}\]
- A tuple $\{\Sigma, C_1, \ldots, C_r\}$, where $C_i:= \{(x,y,t) \in D_i \times K \mid C_{\delta_i}(t,y, \alpha_i(x), \beta_i(x))\}$ will be called a  decomposition of $A$.
-\end{def-theorem}
-\begin{proof}
-This is an obvious consequence of the preparation theorem \ref{thm:partialprep}. Indeed, the existence and definability of $\delta_i, \alpha_i, \beta_i, D_i$ are implied by the theorem. Once can then just define $B$ to be the set of potential centers:
-\[B = \{(y_1, \ldots, y_r) \in K^r \mid A = \cup_{i=1}^r \{(x,t) \in D_i \times K \mid C_{\delta_i}(t,y_i, \alpha_i, \beta_i)\}.\]
-\end{proof}
-
-
-It is less obvious whether it will be able to find a definable center, i.e. whether it is possible to choose an element from $B$ in a definable way. We will discuss some special cases below.
-Let us first make the following observation about definable functions. 
-
-{\color{red} Assumption: The value group of a p-adically closed field is always countable. A $\Z$-group is isomorphic to a direct sum $\Q^d$ with groups $\Q_p/\Z_p$, which are countable. So if there are only finitely many summands, the resulting group is certainly countable. Otherwise..?} 
-\begin{lem}\label{lem:constant}
-Let $f: D\subseteq \Gamma_K^l \to K$ be a definable function in a relatively $P$-minimal structure. Then $f$ is piecewise constant.
-\end{lem}
-\begin{proof}
-{\color{red} TO DO}
-Suppose not, in which case the image $f(D)$ will be an infinite set. Note that by relative $P$-minimality, the graph of $f$ will be $\Lringtwo$-definable, and hence its image is $\Lring$-definable. So by properties of semi-algebraic sets, the image $f(D)$ must contain an open ball. But this would mean we have a surjective map from the {\color{red} countable} set $D$ to an open ball (which is an uncountable set), which is impossible.
-\end{proof}
-\begin{lem}
-Let $A \subseteq \Gamma_K^l \times K$ be a definable set in a RELATIVELY $P$-minimal structure. Then there exists 
-a decomposition of $A$ of the form 
-$\left\{\{c_1, \ldots, c_r\}, C_1, \ldots, C_r\right\}.${\color{red} What is best notation to use here?}
-\end{lem}
-\begin{proof}
-By Theorem-Definition \ref{def:celdecB}, there exists a decomposition $(\Sigma, C_1, \ldots C_r)$. Write $\Sigma_1$ for the projection
-\[\Sigma_1:= \{(\gamma, y) \in \Gamma_K^l \times K \mid \exists y_2, \ldots, y_r \in K: (\gamma, y, y_2, \ldots, y_r) \in \Sigma\}.\]
-By relatively $P$-minimality and Proposition \ref{l=1}, the set $\Sigma_1 \subseteq \Gamma_K^l \times K$ is $\Lringtwo$-definable. But this means that the related set
-\[\tilde{\Sigma}_1:= \{(x,y_1) \in K^{l+1} \mid (\ord x_1, \ldots, \ord x_r, y_1) \in \Sigma_1\}\] is $\Lring$-definable.
-Hence, because the structure $(K,\Lring)$ has definable Skolem functions, there exists a semi-algebraic map $g:\Pi_l(\tilde{\Sigma}_1) \to K$ such that $(x, g(x)) \in \Sigma_1$ whenever $x \in \Pi_l(\tilde{\Sigma}_1)$. {\color{red} define this notation somewhere!} From this one can deduce a map
-$g_\Gamma: \Pi_l(\Gamma_K)\to K$ defined as
-\[g_{\Gamma}(\gamma) = x \Leftrightarrow (\exists y_1, \ldots, y_l)(\ord y_i = \gamma_i \wedge g(y) =x).\]
-This implies that there exists a cell decomposition of $A$ such that the first cell $C_i$ in the decomposition has the form
-\[\{(\gamma, t) \in D_1 \times K \mid C_{\delta_1}(t, g_{\Gamma}(\gamma), \alpha_i(\gamma), \beta_i(\gamma)\}.\]
-Note that by Lemma \ref{lem:constant}, the function $g_{\Gamma}$ is piecewise constant. Hence, after partitioning $D_1$ we may as well assume that $g_{\Gamma}$ is the constant map $g_{\Gamma}(\gamma) = c_1$, for some $c_1 \in K$.
-We can now apply the same procedure to the set 
-\[\Sigma_2:= \{(\gamma, y) \in \Gamma_K^l \times K \mid \exists y_3, \ldots, y_r \in K: (\gamma, c_1 y, y_2, \ldots, y_r) \in \Sigma\}.\]
-Iterating this, we obtain a cell decomposition for $A$ where the center of each cell is a constant. 
-\end{proof}
-{\color{blue} Question: how far can this argument be extended? Could it be concluded that after the right partitioning, the choice of center will only depend on the $K$-variables?}
-
-In this case we are able to definably choose the centers because we are considering a special case. In the semi-algebraic and sub-analytic case, definable Skolem functions are used to choose centers from $\Sigma$. However, it is unknown whether a general (relatively) $P$-minimal structure admits definable Skolem functions. Here we will use a somewhat weaker assumption to obtain a cell decomposition theorem where the cells are more independent entities than in Theorem-Definition \ref{def:celdecB}.
-
-\begin{defn}[definable Skolem relations]
-Let $A \subseteq D \times K$ be an $\Lm_2$-definable set, where $D \subseteq K^{r_1} \times \Gamma_K^{r_2}$. Then the set $\mathcal{S}(A)\subseteq D \times \Gamma_K\times K$, consisting of elements $(d,\gamma,t)$, is a definable Skolem relation on $A$, if $\cS(A)$ is a definable set, and
-\begin{itemize}
-\item If the fiber $A_d$ is finite, then the fiber $\cS(A)_{d,\gamma}$ is a singleton $\{t_0\}$ (independent of $\gamma$), such that $(d, t_0) \in A$.
-\item If the fiber $A_d$ is infinite, then:
-\begin{itemize}
-\item If $A_d$ contains balls with radius $\gamma$, then the fiber $\cS(A)_{d,\gamma}$ is a ball $B_\gamma$ with radius $\gamma$, such that $(d,B_{\gamma}) \subset A$. 
-\item If $A_d$ does not contain any balls with radius $\gamma$ then the fiber $\cS(A)_{d,\gamma}$ is a ball $B_0$ (indep. of $\gamma$) with maximal volume (so with minimal possible radius), such that $(d,B_0) \subset A$.
-\end{itemize}
-\end{itemize}
-{\color{red} Or make it simpler and just always pick a ball with maximal possible volume?}   
-\end{defn}
-Does such a relation $\mathcal{S}(A)$ always exist? Whenever the fiber $A_d$ is finite, it is always possible to definably choose an element $t_0 \in K$ such that $(d,t_0) \in A$, see eg. Denef \cite{denef-84}, Lemma 7.1. When the fibers are infinite, it is not known whether one can always choose a ball in a definable way, but clearly it is a weaker condition than classical Skolem functions. {\color{red} to do: give an example where Skolem functions do not exist, but definable Skolem relations do.}
-\begin{thm}
- Let $(K, \Gamma_K)$ be a {\color{red}(relatively)} $P$-minimal structure with definable Skolem relations. Let $A \subseteq D \times K$ be a definable set. Then $A$ can be partitioned into a finite union of cells of the form
-\end{thm}
-\begin{proof}
-B
-\end{proof}
+ In sections \ref{sec:integration} and \ref{sec:rationality} we show that constructible functions form a class that is stable under integration. This result will be used to derive the rationality of the given Poincare series in section \ref{sec:rationality}.  Finally, in section \ref{sec:relativity} we discuss some generalities regarding the notion of relative $P$-minimality and its relation with classical $P$-minimality. 
 
 
 
