--- a/rationality.tex
+++ b/rationality.tex
@@ -1,30 +1,30 @@
 % !TEX root = nov.tex
-\section{Rationality}
+\section{Rationality}\label{sec:rationality}
 In this section we will give a proof of Theorem \ref{thm:rationality}, which we restate here in a more general version, that gives more details about the exact form of the rational function. 
 \begin{thm}\label{thm:rationalitygeneral}
-Suppose that $(K,\cL)$ is relatively $P$-minimal. Let $X$ be an $\cL_2$-definable subset of $D\times \NN$, where $D$ is a compact subset of $K^m$.  Write $a_n$ for the Haar measure of $X_n:=\{x\in K^m\mid (x,n)\in X\}$, for each $n\geq 0$. Then the series $\sum_{i\geq 0} a_i T^i$ is a rational function. More precisely, 
+Suppose that $(K,\Z)$ is relatively $P$-minimal. Let $X$ be an $\cL_2$-definable subset of $D\times \NN$, where $D$ is a compact subset of $K^m$.  Write $a_n$ for the Haar measure of $X_n:=\{x\in K^m\mid (x,n)\in X\}$, for each $n\geq 0$. Then the series $\sum_{i\geq 0} a_i T^i$ is a rational function. More precisely, 
 \[\sum_{i\geq 0} a_i T^i = \frac{Q(T) }{\prod_{i=1}^r(1-q_K^{-m_i}T^N)^{k_i}},\]
 for certain integers $m_i, k_i,r, N \in \NN$, and $Q(T) \in \AA_{q_K}[T]$. 
 \end{thm}
 \begin{proof}
 
 
-Applying Theorem \ref{thm:partialprep} to the set $X \subset D\times \NN$, one can find a constructible function $g: \NN \to \AA_{q_K}$, such that
+Applying Theorem \ref{thm:partialprep} to the set $X \subseteq D\times \NN$, one can find a constructible function $g: \NN \to \AA_{q_K}$, such that
 \[g(n) = \int_{X_n}|dx|.\]
 This function must have the form 
 \[g(n) = \sum_{i=1}^r a_iq_K^{\alpha_i(n)}\prod_j\beta_{ij}(n),\]
 where $a_i \in \AA_{q_K}$, and the functions $\alpha_i$ and $\beta_{ij}$ are Presburger-definable functions $\NN \to \ZZ$. By the Preparation theorem for Presburger functions, we can partition $\N$ in $\Gamma$-cells $C_1, \ldots C_r \subseteq \N$ of the form
 \[C_i = \{ n \in \N \mid A_i \ \square_1 \ n \ \square_2\ B_i \ \wedge\ n \equiv k_i \mod N \}\]
- such that on each part $g_i:= g_{|C_i}$ has the form 
+ such that on each part, $g_i:= g_{|C_i}$ has the form 
 \[g_i(n) = \sum_{j=1}^r a_{ij}q_K^{m_{ij}(\frac{n-k_i}{N})}P_i\left(\frac{n-k_i}{N}\right),\]
-where $P_i(t)$ is in $\Z[t]$, $m_{ij} \in \N$ and $a_{ij} \in \AA_{q_K}$. Moreover, there exists $M \in \N$, such that $g_i(n) <M$ for all $i,n$, since each $X_n$ is contained in the compact set $D$.
+where $P_i(t)$ is in $\Z[t]$, $m_{ij} \in \ZZ$ and $a_{ij} \in \AA_{q_K}$. Moreover, there exists $M \in \N$, such that $g_i(n) <M$ for all $i,n$, since each $X_n$ is contained in the compact set $D$.
  
 Now put $n_i' := \frac{n-k_i}{N}$, and write $C_i'$ for the set
 \[C_i'=\{n_i'\in \N \mid A_i'\ \square_1 \ n' \ \square_2 \ B_i'\},\]
 where $A_i' =\lfloor \frac{A_i-k_i}{N}\rfloor$, and $B_i' =\lceil \frac{B_i-k_i}{N}\rceil$. Write $I = \{1, \ldots, r\}$, and let $I_1$ denote the set of all $C_i'$ be a set on which $\square_2$ denotes \emph{no condition}. It is easy to check that the condition $g_i'(n_i) <M$ must imply that $m_{ij}<0$ whenever $i \in I_1$.  
 
 We will now consider the integral
-\[I(\sigma):=\sum_{n\in\NN}(q_K^{-\sigma})^{n}\cdot \int_{X_n}|dx|,\] 
+\[I(\sigma):=\sum_{n\in\NN}\left[(q_K^{-\sigma})^{n}\cdot \int_{X_n}|dx|\right],\] 
 where $\sigma \in \RR$, with $\sigma>0$, and show that $I(\sigma)$ is rational in $q_K^{-\sigma}$.
 
 Using the observations above, we get that
@@ -36,7 +36,6 @@ I(\sigma) %&=& \sum_{n\in\NN}(q_K^{-\sigma})^{n}\cdot \int_{X_n}|dx|\\
 \end{eqnarray*}
 for some polynomial $Q_1(T) \in \AA_{q_K}[T]$, since the set $\cup_{i\in I\backslash I_1} C_i'$ is finite.
 %where $C_i'$ is the set $\{n'\in \N \mid A_i'\ \square_1 \ n' \ \square_2 \ B_i'\}$. 
-
 This sum can be computed, using the fact that for all $a \in \N$ and $P(t) \in \Z[t]$ of degree $d$, the following holds in $\Z[[t]]$:
 \[\sum_{n \geqslant a} P(n)t^n =\sum_{i=0}^d	\frac{[\Delta^iP(a)]t^{a+i}}{(1 - t )^{i+1}}.\]
 Here $\Delta^i$ is the $i$-th iterate of the difference operator $\Delta:P \mapsto P(X + 1) - P(X)$ with the convention $\Delta^0P = P$.
